fix spacing on multi-line text in search list

--- a/Experimental/word-addin/src/components/TrimObjectSearchList/TrimObjectSearchList.css
+++ b/Experimental/word-addin/src/components/TrimObjectSearchList/TrimObjectSearchList.css
@@ -96,10 +96,14 @@
 .trim-search-list .ms-Breadcrumb button {
 	text-decoration: underline;
 }
-.trim-list-row-label div {
-	display: inline-block;
+.trim-list-row-label {
+	display: flex;
 }
 
-.trim-list-row-label div:first-child {
-	margin-right: 4px;
+/* .trim-list-row-label div:first-child {
+	width: 24px;
+} */
+
+.row-text {
+	margin-left: 4px;
 }
